# Architecture-Qwen3-Next-Like

./: .gitignore  README.md  basic_inf.py  main.py  pyproject.toml
modeling/: expert_layer.py  gdn_block.py  model.py  model_config.py  moe_gate.py  q3_deltanet.py
